@@ -2,7 +2,7 @@ Package: multmod
 Title: Testing of multiple outcomes
 LazyLoad: yes
 LazyData: yes
-Version: 0.8
+Version: 0.9
 Author: Christian B. Pipper <pipper@life.ku.dk>, Christian Ritz
         <ritz@life.ku.dk>, Signe M. Jensen <smj@life.ku.dk>
 Maintainer: Christian B. Pipper <pipper@life.ku.dk>
@@ -10,8 +10,8 @@ Description: Testing of multiple outcomes using i.i.d. decompositions
 License: GPL (>= 2)
 Depends: R (>= 2.6.0), gtools, mvtnorm, sandwich, MASS, Rcpp
 LinkingTo: Rcpp
-Date: 2011-10-06
+Date: 2011-10-07
 URL: http://www.r-project.org
-Packaged: 2011-10-06 08:38:28 UTC; christianpipper
+Packaged: 2011-10-07 06:57:41 UTC; christianpipper
 Repository: CRAN
-Date/Publication: 2011-10-06 11:11:24
+Date/Publication: 2011-10-08 06:44:38
